tests/lean/semicolonOrLinebreak.lean.expected.out
semicolonOrLinebreak.lean:2:12: error: expected ';' or line break
semicolonOrLinebreak.lean:9:31-10:8: error: Fields missing: `y`
semicolonOrLinebreak.lean:10:8-10:9: error: unexpected identifier; expected command
semicolonOrLinebreak.lean:20:4-20:7: error: Function expected at
  x
but this term has type
  Nat

Note: Expected a function because this term is being applied to the argument
  y
semicolonOrLinebreak.lean:20:2-20:9: error: failed to synthesize
  Singleton ?m Point

Hint: Additional diagnostic information may be available using the `set_option diagnostics true` command.
